src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ELSE
    IF
    LBRACKET
    NEWLINE
    RBRACKET
    WHILE

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement_list statement
Rule 4     statement -> type ID
Rule 5     statement -> type ID ASSIGN expression
Rule 6     type -> INT
Rule 7     type -> FLOAT
Rule 8     type -> CHAR
Rule 9     type -> BOOL
Rule 10    expression -> expression PLUS expression
Rule 11    expression -> expression MINUS expression
Rule 12    expression -> expression TIMES expression
Rule 13    expression -> expression DIVIDE expression
Rule 14    expression -> expression EQ expression
Rule 15    expression -> expression GT expression
Rule 16    expression -> expression GE expression
Rule 17    expression -> expression LT expression
Rule 18    expression -> expression LE expression
Rule 19    expression -> expression AND expression
Rule 20    expression -> expression OR expression
Rule 21    expression -> MINUS expression
Rule 22    expression -> NOT expression
Rule 23    expression -> LPAREN expression RPAREN
Rule 24    expression -> NUMBER
Rule 25    expression -> FLOAT_NUMBER
Rule 26    expression -> TRUE
Rule 27    expression -> FALSE
Rule 28    expression -> CHARACTER
Rule 29    expression -> ID
Rule 30    statement -> ID ASSIGN expression
Rule 31    statement -> DEF type ID LPAREN param_list RPAREN COLON LBRACE statement_list RBRACE
Rule 32    param_list -> param
Rule 33    param_list -> param_list SEMICOLON param
Rule 34    param -> type ID
Rule 35    statement -> RETURN expression
Rule 36    expression -> ID LPAREN arg_list RPAREN
Rule 37    arg_list -> expression
Rule 38    arg_list -> arg_list COMMA expression
Rule 39    arg_list -> empty
Rule 40    statement -> TYPE ID COLON LBRACE field_list RBRACE
Rule 41    field_list -> field
Rule 42    field_list -> field_list field
Rule 43    field -> type ID
Rule 44    expression -> expression DOT ID
Rule 45    empty -> <empty>

Terminals, with rules where they appear

AND                  : 19
ASSIGN               : 5 30
BOOL                 : 9
CHAR                 : 8
CHARACTER            : 28
COLON                : 31 40
COMMA                : 38
DEF                  : 31
DIVIDE               : 13
DOT                  : 44
ELSE                 : 
EQ                   : 14
FALSE                : 27
FLOAT                : 7
FLOAT_NUMBER         : 25
GE                   : 16
GT                   : 15
ID                   : 4 5 29 30 31 34 36 40 43 44
IF                   : 
INT                  : 6
LBRACE               : 31 40
LBRACKET             : 
LE                   : 18
LPAREN               : 23 31 36
LT                   : 17
MINUS                : 11 21
NEWLINE              : 
NOT                  : 22
NUMBER               : 24
OR                   : 20
PLUS                 : 10
RBRACE               : 31 40
RBRACKET             : 
RETURN               : 35
RPAREN               : 23 31 36
SEMICOLON            : 33
TIMES                : 12
TRUE                 : 26
TYPE                 : 40
WHILE                : 
error                : 

Nonterminals, with rules where they appear

arg_list             : 36 38
empty                : 39
expression           : 5 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 22 23 30 35 37 38 44
field                : 41 42
field_list           : 40 42
param                : 32 33
param_list           : 31 33
program              : 0
statement            : 2 3
statement_list       : 1 3 31
type                 : 4 5 31 34 43

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> . type ID
    (5) statement -> . type ID ASSIGN expression
    (30) statement -> . ID ASSIGN expression
    (31) statement -> . DEF type ID LPAREN param_list RPAREN COLON LBRACE statement_list RBRACE
    (35) statement -> . RETURN expression
    (40) statement -> . TYPE ID COLON LBRACE field_list RBRACE
    (6) type -> . INT
    (7) type -> . FLOAT
    (8) type -> . CHAR
    (9) type -> . BOOL

    ID              shift and go to state 5
    DEF             shift and go to state 6
    RETURN          shift and go to state 7
    TYPE            shift and go to state 8
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    CHAR            shift and go to state 11
    BOOL            shift and go to state 12

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    type                           shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (3) statement_list -> statement_list . statement
    (4) statement -> . type ID
    (5) statement -> . type ID ASSIGN expression
    (30) statement -> . ID ASSIGN expression
    (31) statement -> . DEF type ID LPAREN param_list RPAREN COLON LBRACE statement_list RBRACE
    (35) statement -> . RETURN expression
    (40) statement -> . TYPE ID COLON LBRACE field_list RBRACE
    (6) type -> . INT
    (7) type -> . FLOAT
    (8) type -> . CHAR
    (9) type -> . BOOL

    $end            reduce using rule 1 (program -> statement_list .)
    ID              shift and go to state 5
    DEF             shift and go to state 6
    RETURN          shift and go to state 7
    TYPE            shift and go to state 8
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    CHAR            shift and go to state 11
    BOOL            shift and go to state 12

    statement                      shift and go to state 13
    type                           shift and go to state 4

state 3

    (2) statement_list -> statement .

    ID              reduce using rule 2 (statement_list -> statement .)
    DEF             reduce using rule 2 (statement_list -> statement .)
    RETURN          reduce using rule 2 (statement_list -> statement .)
    TYPE            reduce using rule 2 (statement_list -> statement .)
    INT             reduce using rule 2 (statement_list -> statement .)
    FLOAT           reduce using rule 2 (statement_list -> statement .)
    CHAR            reduce using rule 2 (statement_list -> statement .)
    BOOL            reduce using rule 2 (statement_list -> statement .)
    $end            reduce using rule 2 (statement_list -> statement .)
    RBRACE          reduce using rule 2 (statement_list -> statement .)


state 4

    (4) statement -> type . ID
    (5) statement -> type . ID ASSIGN expression

    ID              shift and go to state 14


state 5

    (30) statement -> ID . ASSIGN expression

    ASSIGN          shift and go to state 15


state 6

    (31) statement -> DEF . type ID LPAREN param_list RPAREN COLON LBRACE statement_list RBRACE
    (6) type -> . INT
    (7) type -> . FLOAT
    (8) type -> . CHAR
    (9) type -> . BOOL

    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    CHAR            shift and go to state 11
    BOOL            shift and go to state 12

    type                           shift and go to state 16

state 7

    (35) statement -> RETURN . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression EQ expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression GE expression
    (17) expression -> . expression LT expression
    (18) expression -> . expression LE expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . MINUS expression
    (22) expression -> . NOT expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . NUMBER
    (25) expression -> . FLOAT_NUMBER
    (26) expression -> . TRUE
    (27) expression -> . FALSE
    (28) expression -> . CHARACTER
    (29) expression -> . ID
    (36) expression -> . ID LPAREN arg_list RPAREN
    (44) expression -> . expression DOT ID

    MINUS           shift and go to state 18
    NOT             shift and go to state 19
    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 21
    FLOAT_NUMBER    shift and go to state 22
    TRUE            shift and go to state 23
    FALSE           shift and go to state 24
    CHARACTER       shift and go to state 25
    ID              shift and go to state 26

    expression                     shift and go to state 17

state 8

    (40) statement -> TYPE . ID COLON LBRACE field_list RBRACE

    ID              shift and go to state 27


state 9

    (6) type -> INT .

    ID              reduce using rule 6 (type -> INT .)


state 10

    (7) type -> FLOAT .

    ID              reduce using rule 7 (type -> FLOAT .)


state 11

    (8) type -> CHAR .

    ID              reduce using rule 8 (type -> CHAR .)


state 12

    (9) type -> BOOL .

    ID              reduce using rule 9 (type -> BOOL .)


state 13

    (3) statement_list -> statement_list statement .

    ID              reduce using rule 3 (statement_list -> statement_list statement .)
    DEF             reduce using rule 3 (statement_list -> statement_list statement .)
    RETURN          reduce using rule 3 (statement_list -> statement_list statement .)
    TYPE            reduce using rule 3 (statement_list -> statement_list statement .)
    INT             reduce using rule 3 (statement_list -> statement_list statement .)
    FLOAT           reduce using rule 3 (statement_list -> statement_list statement .)
    CHAR            reduce using rule 3 (statement_list -> statement_list statement .)
    BOOL            reduce using rule 3 (statement_list -> statement_list statement .)
    $end            reduce using rule 3 (statement_list -> statement_list statement .)
    RBRACE          reduce using rule 3 (statement_list -> statement_list statement .)


state 14

    (4) statement -> type ID .
    (5) statement -> type ID . ASSIGN expression

    ID              reduce using rule 4 (statement -> type ID .)
    DEF             reduce using rule 4 (statement -> type ID .)
    RETURN          reduce using rule 4 (statement -> type ID .)
    TYPE            reduce using rule 4 (statement -> type ID .)
    INT             reduce using rule 4 (statement -> type ID .)
    FLOAT           reduce using rule 4 (statement -> type ID .)
    CHAR            reduce using rule 4 (statement -> type ID .)
    BOOL            reduce using rule 4 (statement -> type ID .)
    $end            reduce using rule 4 (statement -> type ID .)
    RBRACE          reduce using rule 4 (statement -> type ID .)
    ASSIGN          shift and go to state 28


state 15

    (30) statement -> ID ASSIGN . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression EQ expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression GE expression
    (17) expression -> . expression LT expression
    (18) expression -> . expression LE expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . MINUS expression
    (22) expression -> . NOT expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . NUMBER
    (25) expression -> . FLOAT_NUMBER
    (26) expression -> . TRUE
    (27) expression -> . FALSE
    (28) expression -> . CHARACTER
    (29) expression -> . ID
    (36) expression -> . ID LPAREN arg_list RPAREN
    (44) expression -> . expression DOT ID

    MINUS           shift and go to state 18
    NOT             shift and go to state 19
    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 21
    FLOAT_NUMBER    shift and go to state 22
    TRUE            shift and go to state 23
    FALSE           shift and go to state 24
    CHARACTER       shift and go to state 25
    ID              shift and go to state 26

    expression                     shift and go to state 29

state 16

    (31) statement -> DEF type . ID LPAREN param_list RPAREN COLON LBRACE statement_list RBRACE

    ID              shift and go to state 30


state 17

    (35) statement -> RETURN expression .
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . TIMES expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . EQ expression
    (15) expression -> expression . GT expression
    (16) expression -> expression . GE expression
    (17) expression -> expression . LT expression
    (18) expression -> expression . LE expression
    (19) expression -> expression . AND expression
    (20) expression -> expression . OR expression
    (44) expression -> expression . DOT ID

    ID              reduce using rule 35 (statement -> RETURN expression .)
    DEF             reduce using rule 35 (statement -> RETURN expression .)
    RETURN          reduce using rule 35 (statement -> RETURN expression .)
    TYPE            reduce using rule 35 (statement -> RETURN expression .)
    INT             reduce using rule 35 (statement -> RETURN expression .)
    FLOAT           reduce using rule 35 (statement -> RETURN expression .)
    CHAR            reduce using rule 35 (statement -> RETURN expression .)
    BOOL            reduce using rule 35 (statement -> RETURN expression .)
    $end            reduce using rule 35 (statement -> RETURN expression .)
    RBRACE          reduce using rule 35 (statement -> RETURN expression .)
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 34
    EQ              shift and go to state 35
    GT              shift and go to state 36
    GE              shift and go to state 37
    LT              shift and go to state 38
    LE              shift and go to state 39
    AND             shift and go to state 40
    OR              shift and go to state 41
    DOT             shift and go to state 42


state 18

    (21) expression -> MINUS . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression EQ expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression GE expression
    (17) expression -> . expression LT expression
    (18) expression -> . expression LE expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . MINUS expression
    (22) expression -> . NOT expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . NUMBER
    (25) expression -> . FLOAT_NUMBER
    (26) expression -> . TRUE
    (27) expression -> . FALSE
    (28) expression -> . CHARACTER
    (29) expression -> . ID
    (36) expression -> . ID LPAREN arg_list RPAREN
    (44) expression -> . expression DOT ID

    MINUS           shift and go to state 18
    NOT             shift and go to state 19
    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 21
    FLOAT_NUMBER    shift and go to state 22
    TRUE            shift and go to state 23
    FALSE           shift and go to state 24
    CHARACTER       shift and go to state 25
    ID              shift and go to state 26

    expression                     shift and go to state 43

state 19

    (22) expression -> NOT . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression EQ expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression GE expression
    (17) expression -> . expression LT expression
    (18) expression -> . expression LE expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . MINUS expression
    (22) expression -> . NOT expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . NUMBER
    (25) expression -> . FLOAT_NUMBER
    (26) expression -> . TRUE
    (27) expression -> . FALSE
    (28) expression -> . CHARACTER
    (29) expression -> . ID
    (36) expression -> . ID LPAREN arg_list RPAREN
    (44) expression -> . expression DOT ID

    MINUS           shift and go to state 18
    NOT             shift and go to state 19
    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 21
    FLOAT_NUMBER    shift and go to state 22
    TRUE            shift and go to state 23
    FALSE           shift and go to state 24
    CHARACTER       shift and go to state 25
    ID              shift and go to state 26

    expression                     shift and go to state 44

state 20

    (23) expression -> LPAREN . expression RPAREN
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression EQ expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression GE expression
    (17) expression -> . expression LT expression
    (18) expression -> . expression LE expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . MINUS expression
    (22) expression -> . NOT expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . NUMBER
    (25) expression -> . FLOAT_NUMBER
    (26) expression -> . TRUE
    (27) expression -> . FALSE
    (28) expression -> . CHARACTER
    (29) expression -> . ID
    (36) expression -> . ID LPAREN arg_list RPAREN
    (44) expression -> . expression DOT ID

    MINUS           shift and go to state 18
    NOT             shift and go to state 19
    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 21
    FLOAT_NUMBER    shift and go to state 22
    TRUE            shift and go to state 23
    FALSE           shift and go to state 24
    CHARACTER       shift and go to state 25
    ID              shift and go to state 26

    expression                     shift and go to state 45

state 21

    (24) expression -> NUMBER .

    PLUS            reduce using rule 24 (expression -> NUMBER .)
    MINUS           reduce using rule 24 (expression -> NUMBER .)
    TIMES           reduce using rule 24 (expression -> NUMBER .)
    DIVIDE          reduce using rule 24 (expression -> NUMBER .)
    EQ              reduce using rule 24 (expression -> NUMBER .)
    GT              reduce using rule 24 (expression -> NUMBER .)
    GE              reduce using rule 24 (expression -> NUMBER .)
    LT              reduce using rule 24 (expression -> NUMBER .)
    LE              reduce using rule 24 (expression -> NUMBER .)
    AND             reduce using rule 24 (expression -> NUMBER .)
    OR              reduce using rule 24 (expression -> NUMBER .)
    DOT             reduce using rule 24 (expression -> NUMBER .)
    ID              reduce using rule 24 (expression -> NUMBER .)
    DEF             reduce using rule 24 (expression -> NUMBER .)
    RETURN          reduce using rule 24 (expression -> NUMBER .)
    TYPE            reduce using rule 24 (expression -> NUMBER .)
    INT             reduce using rule 24 (expression -> NUMBER .)
    FLOAT           reduce using rule 24 (expression -> NUMBER .)
    CHAR            reduce using rule 24 (expression -> NUMBER .)
    BOOL            reduce using rule 24 (expression -> NUMBER .)
    $end            reduce using rule 24 (expression -> NUMBER .)
    RBRACE          reduce using rule 24 (expression -> NUMBER .)
    RPAREN          reduce using rule 24 (expression -> NUMBER .)
    COMMA           reduce using rule 24 (expression -> NUMBER .)


state 22

    (25) expression -> FLOAT_NUMBER .

    PLUS            reduce using rule 25 (expression -> FLOAT_NUMBER .)
    MINUS           reduce using rule 25 (expression -> FLOAT_NUMBER .)
    TIMES           reduce using rule 25 (expression -> FLOAT_NUMBER .)
    DIVIDE          reduce using rule 25 (expression -> FLOAT_NUMBER .)
    EQ              reduce using rule 25 (expression -> FLOAT_NUMBER .)
    GT              reduce using rule 25 (expression -> FLOAT_NUMBER .)
    GE              reduce using rule 25 (expression -> FLOAT_NUMBER .)
    LT              reduce using rule 25 (expression -> FLOAT_NUMBER .)
    LE              reduce using rule 25 (expression -> FLOAT_NUMBER .)
    AND             reduce using rule 25 (expression -> FLOAT_NUMBER .)
    OR              reduce using rule 25 (expression -> FLOAT_NUMBER .)
    DOT             reduce using rule 25 (expression -> FLOAT_NUMBER .)
    ID              reduce using rule 25 (expression -> FLOAT_NUMBER .)
    DEF             reduce using rule 25 (expression -> FLOAT_NUMBER .)
    RETURN          reduce using rule 25 (expression -> FLOAT_NUMBER .)
    TYPE            reduce using rule 25 (expression -> FLOAT_NUMBER .)
    INT             reduce using rule 25 (expression -> FLOAT_NUMBER .)
    FLOAT           reduce using rule 25 (expression -> FLOAT_NUMBER .)
    CHAR            reduce using rule 25 (expression -> FLOAT_NUMBER .)
    BOOL            reduce using rule 25 (expression -> FLOAT_NUMBER .)
    $end            reduce using rule 25 (expression -> FLOAT_NUMBER .)
    RBRACE          reduce using rule 25 (expression -> FLOAT_NUMBER .)
    RPAREN          reduce using rule 25 (expression -> FLOAT_NUMBER .)
    COMMA           reduce using rule 25 (expression -> FLOAT_NUMBER .)


state 23

    (26) expression -> TRUE .

    PLUS            reduce using rule 26 (expression -> TRUE .)
    MINUS           reduce using rule 26 (expression -> TRUE .)
    TIMES           reduce using rule 26 (expression -> TRUE .)
    DIVIDE          reduce using rule 26 (expression -> TRUE .)
    EQ              reduce using rule 26 (expression -> TRUE .)
    GT              reduce using rule 26 (expression -> TRUE .)
    GE              reduce using rule 26 (expression -> TRUE .)
    LT              reduce using rule 26 (expression -> TRUE .)
    LE              reduce using rule 26 (expression -> TRUE .)
    AND             reduce using rule 26 (expression -> TRUE .)
    OR              reduce using rule 26 (expression -> TRUE .)
    DOT             reduce using rule 26 (expression -> TRUE .)
    ID              reduce using rule 26 (expression -> TRUE .)
    DEF             reduce using rule 26 (expression -> TRUE .)
    RETURN          reduce using rule 26 (expression -> TRUE .)
    TYPE            reduce using rule 26 (expression -> TRUE .)
    INT             reduce using rule 26 (expression -> TRUE .)
    FLOAT           reduce using rule 26 (expression -> TRUE .)
    CHAR            reduce using rule 26 (expression -> TRUE .)
    BOOL            reduce using rule 26 (expression -> TRUE .)
    $end            reduce using rule 26 (expression -> TRUE .)
    RBRACE          reduce using rule 26 (expression -> TRUE .)
    RPAREN          reduce using rule 26 (expression -> TRUE .)
    COMMA           reduce using rule 26 (expression -> TRUE .)


state 24

    (27) expression -> FALSE .

    PLUS            reduce using rule 27 (expression -> FALSE .)
    MINUS           reduce using rule 27 (expression -> FALSE .)
    TIMES           reduce using rule 27 (expression -> FALSE .)
    DIVIDE          reduce using rule 27 (expression -> FALSE .)
    EQ              reduce using rule 27 (expression -> FALSE .)
    GT              reduce using rule 27 (expression -> FALSE .)
    GE              reduce using rule 27 (expression -> FALSE .)
    LT              reduce using rule 27 (expression -> FALSE .)
    LE              reduce using rule 27 (expression -> FALSE .)
    AND             reduce using rule 27 (expression -> FALSE .)
    OR              reduce using rule 27 (expression -> FALSE .)
    DOT             reduce using rule 27 (expression -> FALSE .)
    ID              reduce using rule 27 (expression -> FALSE .)
    DEF             reduce using rule 27 (expression -> FALSE .)
    RETURN          reduce using rule 27 (expression -> FALSE .)
    TYPE            reduce using rule 27 (expression -> FALSE .)
    INT             reduce using rule 27 (expression -> FALSE .)
    FLOAT           reduce using rule 27 (expression -> FALSE .)
    CHAR            reduce using rule 27 (expression -> FALSE .)
    BOOL            reduce using rule 27 (expression -> FALSE .)
    $end            reduce using rule 27 (expression -> FALSE .)
    RBRACE          reduce using rule 27 (expression -> FALSE .)
    RPAREN          reduce using rule 27 (expression -> FALSE .)
    COMMA           reduce using rule 27 (expression -> FALSE .)


state 25

    (28) expression -> CHARACTER .

    PLUS            reduce using rule 28 (expression -> CHARACTER .)
    MINUS           reduce using rule 28 (expression -> CHARACTER .)
    TIMES           reduce using rule 28 (expression -> CHARACTER .)
    DIVIDE          reduce using rule 28 (expression -> CHARACTER .)
    EQ              reduce using rule 28 (expression -> CHARACTER .)
    GT              reduce using rule 28 (expression -> CHARACTER .)
    GE              reduce using rule 28 (expression -> CHARACTER .)
    LT              reduce using rule 28 (expression -> CHARACTER .)
    LE              reduce using rule 28 (expression -> CHARACTER .)
    AND             reduce using rule 28 (expression -> CHARACTER .)
    OR              reduce using rule 28 (expression -> CHARACTER .)
    DOT             reduce using rule 28 (expression -> CHARACTER .)
    ID              reduce using rule 28 (expression -> CHARACTER .)
    DEF             reduce using rule 28 (expression -> CHARACTER .)
    RETURN          reduce using rule 28 (expression -> CHARACTER .)
    TYPE            reduce using rule 28 (expression -> CHARACTER .)
    INT             reduce using rule 28 (expression -> CHARACTER .)
    FLOAT           reduce using rule 28 (expression -> CHARACTER .)
    CHAR            reduce using rule 28 (expression -> CHARACTER .)
    BOOL            reduce using rule 28 (expression -> CHARACTER .)
    $end            reduce using rule 28 (expression -> CHARACTER .)
    RBRACE          reduce using rule 28 (expression -> CHARACTER .)
    RPAREN          reduce using rule 28 (expression -> CHARACTER .)
    COMMA           reduce using rule 28 (expression -> CHARACTER .)


state 26

    (29) expression -> ID .
    (36) expression -> ID . LPAREN arg_list RPAREN

    PLUS            reduce using rule 29 (expression -> ID .)
    MINUS           reduce using rule 29 (expression -> ID .)
    TIMES           reduce using rule 29 (expression -> ID .)
    DIVIDE          reduce using rule 29 (expression -> ID .)
    EQ              reduce using rule 29 (expression -> ID .)
    GT              reduce using rule 29 (expression -> ID .)
    GE              reduce using rule 29 (expression -> ID .)
    LT              reduce using rule 29 (expression -> ID .)
    LE              reduce using rule 29 (expression -> ID .)
    AND             reduce using rule 29 (expression -> ID .)
    OR              reduce using rule 29 (expression -> ID .)
    DOT             reduce using rule 29 (expression -> ID .)
    ID              reduce using rule 29 (expression -> ID .)
    DEF             reduce using rule 29 (expression -> ID .)
    RETURN          reduce using rule 29 (expression -> ID .)
    TYPE            reduce using rule 29 (expression -> ID .)
    INT             reduce using rule 29 (expression -> ID .)
    FLOAT           reduce using rule 29 (expression -> ID .)
    CHAR            reduce using rule 29 (expression -> ID .)
    BOOL            reduce using rule 29 (expression -> ID .)
    $end            reduce using rule 29 (expression -> ID .)
    RBRACE          reduce using rule 29 (expression -> ID .)
    RPAREN          reduce using rule 29 (expression -> ID .)
    COMMA           reduce using rule 29 (expression -> ID .)
    LPAREN          shift and go to state 46


state 27

    (40) statement -> TYPE ID . COLON LBRACE field_list RBRACE

    COLON           shift and go to state 47


state 28

    (5) statement -> type ID ASSIGN . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression EQ expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression GE expression
    (17) expression -> . expression LT expression
    (18) expression -> . expression LE expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . MINUS expression
    (22) expression -> . NOT expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . NUMBER
    (25) expression -> . FLOAT_NUMBER
    (26) expression -> . TRUE
    (27) expression -> . FALSE
    (28) expression -> . CHARACTER
    (29) expression -> . ID
    (36) expression -> . ID LPAREN arg_list RPAREN
    (44) expression -> . expression DOT ID

    MINUS           shift and go to state 18
    NOT             shift and go to state 19
    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 21
    FLOAT_NUMBER    shift and go to state 22
    TRUE            shift and go to state 23
    FALSE           shift and go to state 24
    CHARACTER       shift and go to state 25
    ID              shift and go to state 26

    expression                     shift and go to state 48

state 29

    (30) statement -> ID ASSIGN expression .
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . TIMES expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . EQ expression
    (15) expression -> expression . GT expression
    (16) expression -> expression . GE expression
    (17) expression -> expression . LT expression
    (18) expression -> expression . LE expression
    (19) expression -> expression . AND expression
    (20) expression -> expression . OR expression
    (44) expression -> expression . DOT ID

    ID              reduce using rule 30 (statement -> ID ASSIGN expression .)
    DEF             reduce using rule 30 (statement -> ID ASSIGN expression .)
    RETURN          reduce using rule 30 (statement -> ID ASSIGN expression .)
    TYPE            reduce using rule 30 (statement -> ID ASSIGN expression .)
    INT             reduce using rule 30 (statement -> ID ASSIGN expression .)
    FLOAT           reduce using rule 30 (statement -> ID ASSIGN expression .)
    CHAR            reduce using rule 30 (statement -> ID ASSIGN expression .)
    BOOL            reduce using rule 30 (statement -> ID ASSIGN expression .)
    $end            reduce using rule 30 (statement -> ID ASSIGN expression .)
    RBRACE          reduce using rule 30 (statement -> ID ASSIGN expression .)
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 34
    EQ              shift and go to state 35
    GT              shift and go to state 36
    GE              shift and go to state 37
    LT              shift and go to state 38
    LE              shift and go to state 39
    AND             shift and go to state 40
    OR              shift and go to state 41
    DOT             shift and go to state 42


state 30

    (31) statement -> DEF type ID . LPAREN param_list RPAREN COLON LBRACE statement_list RBRACE

    LPAREN          shift and go to state 49


state 31
